lab-03/target/classes/META-INF/fabric8/openshift/cart-service-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: bd457d7f73011cf2d8ec1b5df6c961da00c05f31
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: solution
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=cart-service&var-version=1.0.0-SNAPSHOT
  labels:
    app: cart-service
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.redhat.coolstore
  name: cart-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: cart-service
    provider: fabric8
    group: com.redhat.coolstore
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: bd457d7f73011cf2d8ec1b5df6c961da00c05f31
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: solution
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=cart-service&var-version=1.0.0-SNAPSHOT
      labels:
        app: cart-service
        provider: fabric8
        version: 1.0.0-SNAPSHOT
        group: com.redhat.coolstore
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: cart-service:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 200Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: cart-service:latest
    type: ImageChange
