lab-03/target/classes/META-INF/fabric8/openshift/cart-service-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: cart-service
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.redhat.coolstore
  name: cart-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: cart-service
